--- a/src/components/CategoryBar.astro
+++ b/src/components/CategoryBar.astro
@@ -1,6 +1,5 @@
 ---
 import { Image } from "astro:assets";
-
 import { categoryList } from "../quearies/category.js";
 ---
 
@@ -12,43 +11,32 @@ import { categoryList } from "../quearies/category.js";
     }
 
     .category-bar {
-        background-color: #1f0d07;
+        background-color: black;
         display: flex;
         justify-content: space-around;
         align-items: center;
         height: 50px;
         color: #fff;
-        
-    }
 
+    }
+    
     .category-button {
-        /* color: #eeeeee;
-        padding: 80px;               /Moving/ 
-        text-decoration: none; */
         float: left;
         display: block;
         color: #f2f2f2;
         text-align: center;
-        margin-right: 5vw;
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
-
         overflow: hidden;
     }
 
     .category-button:hover {
         background-color: #555;
         border-radius: 9%;
-        
+        font-size: 1.1em; Промяна на размера на шрифта
     }
 
-    .category-button:hover {
-        /* font-size: 1.1em; Промяна на размера на шрифта */
-        
-    }
-
-    @media screen (max-width: 1216x;);
 </style>
 
 <div class="category-bar">
@@ -67,4 +55,3 @@ import { categoryList } from "../quearies/category.js";
         }
     </div>
 </div>
-
