--- a/src/components/OpinionSlider.astro
+++ b/src/components/OpinionSlider.astro
@@ -69,8 +69,7 @@ import "@splidejs/splide/css";
   .splide__track {
     color: rgb(0, 0, 0);
     /* background-color: #F5EEE2; */
-    width: 100%;
-    border: 2px solid grey;
+    border-top: 2px solid grey;
     padding: 4%;
   }
 
@@ -81,7 +80,13 @@ import "@splidejs/splide/css";
 
   .userdiv{
     text-align: center;
+    margin-bottom: 4%
+    ;
   }
+
+
+  @media screen ( max-width: 1216px);
+
 </style>
 
 <script>
