--- a/src/components/SEOcontent.astro
+++ b/src/components/SEOcontent.astro
@@ -1,8 +1,36 @@
 ---
 
 ---
+    <style>
+        .contentBox {
+            display: flex;
+            width: 70%;
+            padding: 6%;
+            /* background-color: #F5EEE2; */
+        }
+    
+        .text {
+            font-size: 90%;
+            font-family: "Open Sans", sans-serif;
+            text-align: left;
+            color: #000000;
+        }
+    
+        .ad {
+            width: 300px;
+            height: 600px;
+            border: 2px solid black;
+            margin-top: 40px;
+            text-align: center;
+        }
+    
+        .all {
+            display: flex;
+            flex-direction: row;
+        }
+    </style>
 
-<content>
+<div class="all">
     <div class="contentBox">
         <div class="text">
             <h2>Защо най-добрите ресторанти?</h2>
@@ -85,31 +113,21 @@
                 пътешествие, в което вкусът, атмосферата и иновациите се
                 преплитат в хармония. Специалните събития, предоставяйки
                 тематични вечери и дегустационни събития, обогатяват този
-                кулинарен свят, правейки го още по-завладяващ. </p>
-                
-               <p> От тях се ражда вълнуващата възможност да обичаме не само вкусовете, но и
-                креативните изрази на готвачите и уникалните аспекти на
-                сервирането. Така, търсейки най-добрите ресторанти и съчетавайки
-                ги със специални събития, влизаме в свят, където всяка хапка е
-                изкуство, а всяко посещение става пътешествие във вълнуващия
-                свят на гурме изкуствата.
+                кулинарен свят, правейки го още по-завладяващ.
+            </p>
+
+            <p>
+                От тях се ражда вълнуващата възможност да обичаме не само
+                вкусовете, но и креативните изрази на готвачите и уникалните
+                аспекти на сервирането. Така, търсейки най-добрите ресторанти и
+                съчетавайки ги със специални събития, влизаме в свят, където
+                всяка хапка е изкуство, а всяко посещение става пътешествие във
+                вълнуващия свят на гурме изкуствата.
             </p>
         </div>
     </div>
-</content>
+    <div class="ad">
+    <p>Реклама</p>
+    </div>
+</div>
 
-<style>
-    .contentBox {
-        display: flex;
-        width: 70%;
-        padding: 6%;
-        /* background-color: #F5EEE2; */
-    }
-
-    .text {
-        font-size: 90%;
-        font-family: "Open Sans", sans-serif;
-        text-align: left;
-        color: #000000;
-    }
-</style>
