--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -9,6 +9,7 @@ const {
 
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import CategoryBar from "../components/CategoryBar.astro";
 import '../styles/global.css';
 ---
 
@@ -28,7 +29,7 @@ import '../styles/global.css';
   </head>
   <body>
     <Header />
-
+    <CategoryBar />
     <slot />
 
     <Footer />
