--- a/src/components/InfinityHorizontalSlider.astro
+++ b/src/components/InfinityHorizontalSlider.astro
@@ -8,33 +8,41 @@ import "@splidejs/splide/css";
 <style>
     .splide__slide {
         display: flex;
+        margin: 5px ; Променено от 5px 4px 
         flex-direction: column;
         justify-content: center; /* Center vertically */
         align-items: center; /* Center horizontally */
         text-align: center; /* Center text horizontally */
     }
+
+  
+
+
+
+    
 </style>
 
 <script>
     import { Splide } from "@splidejs/splide";
     import { AutoScroll } from "@splidejs/splide-extension-auto-scroll";
 
-    new Splide(".splide").mount({ AutoScroll });
+    /* new Splide(".splide").mount({ AutoScroll }); */
 
-    const splide = new Splide(".splide", {
+    const splide = new Splide(".splide-inf", {
+        
         type: "loop",
         drag: "free",
         focus: "center",
         perPage: 3,
         autoScroll: {
-            speed: 0.5
+        speed: 0.5
         },
     });
 
-    splide.mount();
+    splide.mount({ AutoScroll });
 </script>
 
-<section class="splide infinity_slide">
+<section class="splide infinity_slide splide-inf">
     <div class="splide__track">
         <ul class="splide__list">
             {
@@ -53,3 +61,4 @@ import "@splidejs/splide/css";
         </ul>
     </div>
 </section>
+
