--- a/src/components/SingleArticle.astro
+++ b/src/components/SingleArticle.astro
@@ -1,38 +1,56 @@
 ---
 import { Image } from "astro:assets";
 
-const { url, image, name } = Astro.props;
+const { url, image, name, Category } = Astro.props;
 ---
 
 <style>
-   
-    a{
+    a {
         position: relative;
     }
 
-    h2{
+    h2 {
+        z-index: 4;
         position: absolute;
         bottom: 0;
         left: 1;
-        color: rgb(0, 0, 0);
+        color: white;
+        margin-left: 4%;
     }
 
-    img{
+    img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 7%;
-        
+    }
+
+    .blur {
+        z-index: 1;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.6519782913165266) 22%,
+            rgba(255, 255, 255, 0) 100%
+        );
+        background-size: cover;
+        border-radius: 20px;
     }
 </style>
 
 <a href={`/blog/${url}`}>
-    <h2>{name}</h2>
-    <Image
-    src={image.data.attributes.url}
-    alt={image.data.attributes.alternativeText || "Ресторанти"}
-    width="200"
-    height="200"
-    />
-</a>
+    <div style="position: relative;">
+        <h2>{name}</h2>
+        <h2>{Category}</h2>
+        <div class="blur"></div>
 
+        <Image
+            src={image.data.attributes.url}
+            alt={image.data.attributes.alternativeText || "Ресторанти"}
+            width="200"
+            height="200"
+        />
+    </div>
+</a>
