--- a/src/pages/categories/[slug].astro
+++ b/src/pages/categories/[slug].astro
@@ -5,6 +5,7 @@ import { categoryList } from "../../quearies/category.js";
 import { Image } from "astro:assets";
 import DefaultLayout from "../../layouts/DefaultLayout.astro";
 import SingleArticle from "../../components/SingleArticle.astro";
+import Lastest from "../../components/Lastest.astro";
 
 export const getStaticPaths = (async () => {
   return categoryList.categories.data.map(({ attributes }) => ({
@@ -15,25 +16,90 @@ export const getStaticPaths = (async () => {
 
 const categoryData = Astro.props;
 
-
-const articlesArray = categoryData.posts.data.map(item => item.id);
-
+const articlesArray = categoryData.posts.data.map((item) => item.id);
 ---
 
-<DefaultLayout>
-    {
-        articlesList.posts.data.map((item) => {
+<style>
+  .content-grid {
+    display: grid;
+    grid-template-columns: repeat(
+      3,
+      1fr
+    ); /* Поставяме по три компонента на ред */
+    gap: 20px; /* Добавяме разстояние между компонентите */
+    padding: 20px; /* Добавяме отстъп от ръбовете на контейнера */
+    width: 40%;
+grid-template-rows: fit-content(10px);
+    margin: 0 auto; /* Центрираме грида */
+  }
 
-            if (articlesArray.includes(item.id)) {   
-                return (
-                    <SingleArticle
-                        url={item.attributes.slug}
-                        image={item.attributes.image}
-                        name={item.attributes.name}
-                    />
-                );
+ 
+
+  .name {
+    text-align: center;
+  }
+
+  .line {
+    color: black;
+    border-bottom: solid 3px black;
+    margin-top: 20px;
+    width: 50%;
+  }
+
+  .line-layout {
+    display: flex;
+    justify-content: center; 
+  }
+
+  .Lastest-div{
+    width: 20%;
+    order: 2;
+    margin-bottom: 4%;
+  }
+
+  .grid-div{
+    display: flex; /* Показваме децата на грида във flex контейнер */
+    justify-content: space-between; /* Разполагаме децата с равно разстояние между тях */
+
+  }
+  .content-grid{
+    width: 50%;
+    margin-left: 24%;
+  }
+
+</style>
+
+<DefaultLayout>
+  <div class="name">
+    <h1>{categoryData.name}</h1>
+  </div>
+  
+  <div class="line-layout">
+    <div class="line"></div>
+  </div>
+  
+  
+  
+  <div class="grid-div">
+    <div class="Lastest-div">
+    
+      <Lastest/>
+    </div>
+    
+    <div class="content-grid">
+      {
+        articlesList.posts.data.map((item) => {
+          if (articlesArray.includes(item.id)) {
+            return (
+              <SingleArticle
+              url={item.attributes.slug}
+              image={item.attributes.image}
+              name={item.attributes.name}
+              />
+              );
             }
-        })
-    }
-  <h1>{categoryData.name}</h1>
+          })
+        }
+  </div>
+</div>
 </DefaultLayout>
