--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 html {
-    /* background-color: #F5EEE2; */
-    background-color: #fae5c4;
+    background-color:#F5F5F5;
+    /* background-color: #fae5c4; */
+   
   }
